--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "azure-event-hubs": "^0.2.1",
     "express": "~4.17.1",
+    "socket.io": "1.3.5",
     "moment": "^2.17.1",
     "ws": "^2.1.0"
   }
